Closed Bug 400918 Opened 18 years ago Closed 17 years ago

nsBidiUtils.h shouldn't include nsCOMPtr.h

Categories

(Core :: Internationalization, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: pavlov, Assigned: smontagu)

Details

Attachments

(1 file)

There is no point and adds some strange dependencies. Can we remove it?
Attached patch Remove itSplinter Review
Requesting rs
Attachment #285986 - Flags: superreview?(roc)
Attachment #285986 - Flags: superreview?(roc)
Attachment #285986 - Flags: superreview+
Attachment #285986 - Flags: review+
smontagu, were you going to check this in?
Comment on attachment 285986 [details] [diff] [review] Remove it Requesting approval for this trivial removal of an unnecessary #include
Attachment #285986 - Flags: approval1.9?
Attachment #285986 - Flags: approval1.9? → approval1.9+
Checked in.
Status: NEW → RESOLVED
Closed: 17 years ago
Flags: in-testsuite-
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: