Remove unnecessary include of nsCOMPtr.h. Bug 400918, r+sr=roc, a=dsicore